# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: check-file.yml
gendiff/: data_extraction.py  diff.py  engine.py  file_extraction.py  generate_diff.py  parsing.py  stylish.py
gendiff/engine/: change_view.py  diff.py  file_extraction.py  view_change.py
gendiff/formatter/: define_formatter.py  format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_engine.py  test_file_extraction.py  test_gendiff.py  test_plain.py  test_stylish.py
tests/fixtures/: file3.json  file4.yml  file5.json  file5.yml  result_json.py  result_json.txt
