[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksandr <nastyavin86@br.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:print_h'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
